--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
     <div class="half-width">
         <h1>WELCOME TO </h1>
     <h1> <span  class="orange-color">
@@ -24,7 +24,7 @@
     </span> WORLD!</h1>
     <h3>Build Climber and Train Stopper</h3>
     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-    <a class="link-button" target="_blank" href="wwww.fb.com">Hire Me</a>
+    <a class="link-button" target="_blank" href="https://www.facebook.com">Hire Me</a>
     </div>
 
     <div class="half-width">
@@ -33,6 +33,26 @@
     </div>
    
    </section>
+
+<section class="Dream-big">
+    <div class="half-width">
+        <img src="images/ism2.png" alt="">
+    </div>
+
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+
+        <p>
+            I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com">DOWNLOAD</a>
+    </div>
+
+
+
+</section>
+
 
     
     
